# flask_todo

./: README.md  pyproject.toml
src/: app.py
src/templates/: base.html
